# teo-runtime

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/action/: action.rs  backup.rs  const_values.rs  mod.rs
src/admin/: language.rs
src/app/: app.rs  data.rs  mod.rs  program.rs
src/app/callbacks/: callbacks.rs
src/app/cleanup/: mod.rs
src/app/cli/: mod.rs  parse.rs
src/app/entrance/: mod.rs
src/arguments/: mod.rs
src/coder/: json_to_teon.rs  mod.rs
src/comment/: mod.rs
src/config/: admin.rs  client.rs  connector.rs  debug.rs  entity.rs  mod.rs  server.rs  test.rs
src/connection/: connection.rs  ctx.rs  mod.rs  transaction.rs
src/connection/connection/: connection.rs  ctx.rs  mod.rs
src/connection/transaction/: ctx.rs  extract.rs  mod.rs  transaction.rs
src/cookies/: cookie.rs  cookies.rs  mod.rs
src/data_set/: mod.rs
src/database/: database.rs  enum.rs  mod.rs  type.rs
src/database/mongo/: type.rs
src/database/mysql/: type.rs
src/database/postgres/: type.rs
src/database/sqlite/: type.rs
src/enum/: builder.rs  decorator.rs  enum.rs  mod.rs
src/enum/member/: builder.rs  decorator.rs  member.rs  mod.rs
src/error/: mod.rs
src/error_ext/: mod.rs
src/error_runtime_ext/: mod.rs
src/handler/: action.rs  builder.rs  ctx_argument.rs  decorator.rs  default.rs  extract.rs  group.rs  handler.rs  map.rs  match.rs  method.rs  mod.rs
src/handler/default/: aggregate.rs  copy.rs  copy_many.rs  copy_or_create.rs  count.rs  create.rs  create_many.rs  delete.rs  delete_many.rs  find_first.rs  find_many.rs  find_unique.rs  group_by.rs  mod.rs  update.rs  update_many.rs  upsert.rs
src/handler/group/: builder.rs  group.rs  mod.rs
src/handler/input/: builtin.rs  custom.rs  mod.rs
src/headers/: headers.rs  mod.rs
src/index/: mod.rs
src/interface/: builder.rs  decorator.rs  interface.rs  mod.rs
src/interface/field/: builder.rs  decorator.rs  field.rs  mod.rs
src/interface_enum_variant/: mod.rs
src/middleware/: block.rs  creator.rs  definition.rs  middleware.rs  middleware_imp.rs  middleware_impl.rs  mod.rs  next.rs  next_imp.rs  use.rs
src/model/: builder.rs  ctx.rs  decorator.rs  mod.rs  model.rs
src/model/field/: builder.rs  column_named.rs  decorator.rs  field.rs  index.rs  indexable.rs  is_optional.rs  migration.rs  mod.rs  set_optional.rs  typed.rs
src/model/index/: index.rs  item.rs  mod.rs
src/model/migration/: mod.rs
src/model/object/: input.rs  mod.rs  object.rs
src/model/property/: builder.rs  decorator.rs  mod.rs  property.rs
src/model/relation/: builder.rs  decorator.rs  delete.rs  mod.rs  relation.rs  update.rs
src/namespace/: builder.rs  extensions.rs  mod.rs  namespace.rs
src/object/: error_ext.rs  mod.rs
src/object/cast/: mod.rs
src/object/serde/: json.rs
src/object/traits/: mod.rs
src/optionality/: mod.rs
src/path/: error.rs  mod.rs  result.rs
src/pipeline/: ctx.rs  mod.rs  pipeline.rs
src/pipeline/ctx/: extract.rs  mod.rs
src/pipeline/item/: bounded_item.rs  callback.rs  compare.rs  creator.rs  item.rs  item_impl.rs  mod.rs  transform.rs  validator.rs
src/previous/: mod.rs
src/readwrite/: read.rs  write.rs
src/request/: cookies.rs  extract.rs  local.rs  local_objects.rs  local_values.rs  mod.rs  request.rs  request_actix.rs
src/request/cookie/: mod.rs  readonly.rs
src/request/ctx/: extract.rs  mod.rs
src/request/header/: mod.rs  readonly.rs
src/response/: convert.rs  error.rs  mod.rs  response.rs
src/response/body/: mod.rs
src/response/header/: readwrite.rs
src/result/: mod.rs
src/schema/: mod.rs
src/schema/fetch/: fetch_argument_list.rs  fetch_decorator_arguments.rs  fetch_expression.rs  mod.rs
src/schema/load/: load_admin.rs  load_client.rs  load_comment.rs  load_connector.rs  load_data_sets.rs  load_database_information.rs  load_debug.rs  load_entity.rs  load_enum.rs  load_handler.rs  load_handler_group.rs  load_handler_inclusion.rs  load_handler_template.rs  load_interface.rs  load_model.rs  load_model_opposite_relations.rs  load_schema.rs  load_server.rs  load_test.rs  load_use_middlewares.rs  mod.rs
src/sort/: mod.rs
src/stdlib/: load.rs  mod.rs
src/stdlib/admin/: mod.rs
src/stdlib/decorators/: enum_decorators.rs  enum_member_decorators.rs  handler_decorators.rs  mod.rs  (+7 more)
src/struct/: mod.rs  struct.rs
src/traits/: documentable.rs  generated_enum_to_value.rs  mod.rs  named.rs
src/utils/: find_main_schema_file.rs  mod.rs
src/value/: file.rs  interface_enum_variant.rs  macros.rs  mod.rs  range.rs  serialize.rs  value.rs
(+136 files in other folders)
