[package]
name = "teo-runtime"
version = "0.3.0-alpha.1"
edition = "2021"
description = "Runtime for Teo"
license = "Apache-2.0"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo-runtime"

[dependencies]
teo-result = { version = "0.3.0-alpha.1", path = "../teo-result" }
teo-parser = { version = "0.3.0-alpha.1", path = "../teo-parser" }
hyper = { version = "1.5.0", features = ["full"]}
hyper-util = { version = "0.1.9", features = ["full"] }
http-body-util = "0.1"
mime = "0.3.17"
cookie = { version = "0.18.1", features = ["percent-encode"] }
maplit = "1.0.2"
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
educe = "=0.5.11"
key-path = "0.2.2"
async-trait = "0.1.80"
async-recursion = "1.1.1"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
cuid2 = "0.1.2"
cuid = "=1.2.0"
regex = "1.10.2"
random-string = "1.0"
futures = "0.3"
futures-util = "0.3"
bigdecimal = "=0.3.1"
num-integer = "0.1.45"
rand = "0.8.5"
once_cell = "1.19"
inflector-plus = "0.11.7"
pad = "0.1.6"
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.2"
log = "0.4.20"
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with"] }
tokio = { version = "1.0", features = ["full"] }
itertools = "0.13.0"
bcrypt = "0.15.1"
time = "0.3.36"
colored = "2.1.0"
array_tool = "1.0.3"
deferred-box = "0.1.4"
history-box = "0.1.1"
bytes = "1.8.0"